--- a/app/src/main/res/layout/maalscreen.xml
+++ b/app/src/main/res/layout/maalscreen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -64,4 +64,4 @@
         android:text="Historik for maal(hoved i cm, højde i cm og vægt i kg + 2 decimaler)"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="18dp" />
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
