--- a/app/src/main/res/layout/madscreen.xml
+++ b/app/src/main/res/layout/madscreen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -72,4 +72,4 @@
         android:text="Historik(startstid, varighed, type, afstand)"
         app:layout_constraintTop_toBottomOf="@+id/mad_meal"
         tools:layout_editor_absoluteX="31dp" />
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
